2022-02-27  Jonathan Bedard  <jbedard@apple.com>

        webkitpy: WebSocket server doesn't support Python 3
        https://bugs.webkit.org/show_bug.cgi?id=230319
        <rdar://problem/58814743>

        Reviewed by Fujii Hironori.

        Make all tests Python 3 compatible, even at the cost of Python 2
        compatibility, since WebSocket tests are always invoked with Python 3.

        * TestExpectations:
        * http/tests/websocket/tests/hybi/bad-handshake-crash_wsh.py:
        (web_socket_do_extra_handshake):
        * http/tests/websocket/tests/hybi/binary-frames_wsh.py:
        (web_socket_transfer_data):
        (all_distinct_bytes):
        * http/tests/websocket/tests/hybi/broken-utf8_wsh.py:
        (web_socket_transfer_data):
        * http/tests/websocket/tests/hybi/check-binary-messages_wsh.py:
        (web_socket_transfer_data):
        (all_distinct_bytes):
        * http/tests/websocket/tests/hybi/client-close-2-expected.txt:
        * http/tests/websocket/tests/hybi/client-close-2.html:
        * http/tests/websocket/tests/hybi/client-close-2_wsh.py:
        (web_socket_transfer_data):
        * http/tests/websocket/tests/hybi/client-close-expected.txt:
        * http/tests/websocket/tests/hybi/client-close.html:
        * http/tests/websocket/tests/hybi/client-close_wsh.py:
        (web_socket_transfer_data):
        * http/tests/websocket/tests/hybi/close-code-and-reason_wsh.py:
        (web_socket_transfer_data):
        * http/tests/websocket/tests/hybi/close-on-unload_wsh.py:
        (web_socket_transfer_data):
        * http/tests/websocket/tests/hybi/compressed-control-frame_wsh.py:
        (web_socket_transfer_data):
        * http/tests/websocket/tests/hybi/cookie_wsh.py:
        (web_socket_do_extra_handshake):
        * http/tests/websocket/tests/hybi/deflate-frame-invalid-parameter_wsh.py:
        (web_socket_do_extra_handshake):
        * http/tests/websocket/tests/hybi/deflate-frame_wsh.py: