@@ -1223,6 +1223,10 @@ std::optional<unsigned> AccessibilityObjectAtspi::effectiveRole() const
         return Atspi::Role::PasswordText;
 
     switch (m_coreObject->roleValue()) {
+    case AccessibilityRole::Form:
+        if (m_coreObject->ariaRoleAttribute() != AccessibilityRole::Unknown)
+            return Atspi::Role::Landmark;
+        break;
     case AccessibilityRole::ListMarker: {
         auto* renderer = m_coreObject->renderer();
         return renderer && renderer->isImage() ? Atspi::Role::Image : Atspi::Role::Text;
@@ -1310,6 +1314,8 @@ String AccessibilityObjectAtspi::effectiveRoleName() const
         return "subscript";
     case Atspi::Role::Superscript:
         return "superscript";
+    case Atspi::Role::Landmark:
+        return "landmark";
     default:
         break;
     }
@@ -1363,6 +1369,8 @@ const char* AccessibilityObjectAtspi::effectiveLocalizedRoleName() const
         return AccessibilityAtspi::localizedRoleName(AccessibilityRole::Subscript);
     case Atspi::Role::Superscript:
         return AccessibilityAtspi::localizedRoleName(AccessibilityRole::Superscript);
+    case Atspi::Role::Landmark:
+        return AccessibilityAtspi::localizedRoleName(AccessibilityRole::LandmarkMain);
     default:
         break;
     }
