@@ -1,3 +1,15 @@
+2022-02-28  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        [GTK][a11y] Test accessibility/gtk/xml-roles-exposed.html is failing since ATSPI switch
+        https://bugs.webkit.org/show_bug.cgi?id=237202
+
+        Reviewed by Adrian Perez de Castro.
+
+        Handle the special case of form item having unknown aria role to be exposed as landmark.
+
+        * accessibility/atspi/AccessibilityObjectAtspi.cpp:
+        (WebCore::AccessibilityObjectAtspi::effectiveRole const):
+
 2022-02-28  Antoine Quint  <graouts@webkit.org>
 
         [web-animations] web-animations/interfaces/KeyframeEffect/processing-a-keyframes-argument-001.html is a unique failure
