@@ -1,3 +1,13 @@
+2022-02-28  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        [GTK][a11y] Test accessibility/gtk/xml-roles-exposed.html is failing since ATSPI switch
+        https://bugs.webkit.org/show_bug.cgi?id=237202
+
+        Reviewed by Adrian Perez de Castro.
+
+        * platform/gtk/TestExpectations: Remove accessibility/gtk/xml-roles-exposed.html.
+        * platform/gtk/accessibility/gtk/xml-roles-exposed-expected.txt: Rebaseline.
+
 2022-02-27  Jonathan Bedard  <jbedard@apple.com>
 
         webkitpy: WebSocket server doesn't support Python 3
